Updated Parachute Description

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute_TAN.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute_TAN.cfg
@@ -43,7 +43,7 @@ PART
 	
 	title = Vostok Parachute
 	manufacturer = OKB-1
-	description = Even though Vostok Cosmonauts ejected and landed separate from the craft, this parachute is designed to be used with the Vostok Capsule.
+	description = When Yuri Gagarin returned to Earth after the first maiden spaceflight, he ejected from the capsule and parachuted to the ground. It was not until later versions of the capsule was the Parachute added.
 	
 	mass = 0.025
 	
