Vostok fully working, requires Testing

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService_TAN.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService_TAN.cfg
@@ -215,15 +215,19 @@ PART
 	{
 		name = ModuleEngineConfigs
 		type = ModuleEngines
-		configuration = TDU S5.4
+		configuration = TDU-S54
 		modded = false
+		
 		CONFIG
 		{
-			name = TDU S5.4
+			name = TDU-S54
 			minThrust = 15.83
 			maxThrust = 15.83
 			heatProduction = 100
 			ignitions = 1
+			ullage = False
+			pressureFed = False
+			
 			PROPELLANT
 			{
 				name = AK20
@@ -235,7 +239,7 @@ PART
 				name = Tonka250
 				ratio = 0.84
 			}
-			atmoSphereCurve
+			atmosphereCurve
 			{
 				key = 0 266
 				key = 1 100
@@ -292,7 +296,7 @@ PART
 			name = Nitrogen
 		}
 		
-        atmoSphereCurve
+        atmosphereCurve
         {
             key = 0 65
             key = 1 10
@@ -328,7 +332,7 @@ PART
 			name = Nitrogen
 		}
 		
-        atmoSphereCurve
+        atmosphereCurve
         {
             key = 0 65
             key = 1 10
