CRAFT & SAVE BREAKING!! Change the PartName of the Vostok Parts

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
@@ -1,7 +1,7 @@
 PART
 {
 	module = Part
-	name = ROC-VostokParachute-TAN
+	name = ROC-VostokParachute
 	author = Tantares, Pap
 	
 	RSSROConfig = true
