--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService_RealPlume.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService_RealPlume.cfg
@@ -1,4 +1,4 @@
-@PART[ROC-VostokService-TAN]:FOR[RealPlume]:NEEDS[SmokeScreen]
+@PART[ROC-VostokService]:FOR[RealPlume]:NEEDS[SmokeScreen]
 {
     PLUME
     {
