--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokDecoupler.cfg
@@ -1,7 +1,7 @@
 PART
 {
 	module = Part
-	name = ROC-VostokDecoupler-TAN
+	name = ROC-VostokDecoupler
 	author = Tantares, Pap
 	
 	RSSROConfig = true
