Changed Vostok Configs to use a total of 0.55 EC between Capsule and SM

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -106,7 +106,7 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.017
+			rate = 0.25 // A little more than half the Mercury Capsule as we will put it in the SM
 		}
 	}
 	
