--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -207,6 +207,17 @@ PART
 	
 	MODULE
 	{
+		name = ModuleCommand
+		minimumCrew = 0
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.30 // A little more than half the Mercury Capsule
+		}
+	}
+	
+	MODULE
+	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = thrustTransform
 	}
@@ -338,6 +349,13 @@ PART
             key = 1 10
         }
     }
+	
+	MODULE
+	{
+		name = ModuleAvionics
+		massLimit = 10.0
+		interplanetary = False
+	}
 	
 	EFFECTS
 	{
