--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
@@ -2,7 +2,7 @@ PART
 {
 	module = Part
 	name = ROC-VostokParachute
-	author = Tantares, Pap
+	author = RaiderNick, Pap
 	
 	RSSROConfig = true
 	RP0conf = true
@@ -13,44 +13,33 @@ PART
 	
 	MODEL
 	{
-		model = ROCapsules/Assets/Tantares/Vostok/Vostok_Parachute_1
-		scale = 1.8491, 1.8491, 1.8491
-	}
-	MODEL:NEEDS[RealChute]
-	{
-		model = RealChute/Parts/model_RC_canopy2
-		//scale = x-width, height, y-width
-		//at normal scale (1, 1, 1) the parachute has an in game width of 9.893m
-		//do the math if you want to change it
-   		scale = 0.61, 0.7, 0.61
-		position = 0, 0.025, 0
-		texture = RC_canopy_main, RealChute/Parts/RC_canopy_drogue
+		model = ROCapsules/Assets/RN/vostok_para
+		scale = 1.0, 1.0, 1.0
 	}
 	
 	scale = 1.0
 	rescaleFactor = 1.0
 	
-	node_stack_top    = 0.0,  0.1271, 0.0, 0.0, 1.0, 0.0, 0
-	node_stack_bottom = 0.0, -0.1271, 0.0, 0.0, -1.0, 0.0, 0
+	node_stack_para   = -0.81345, 0.2886, 0.0, 0.0, -1.0, 0.0, 1
 	// stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,0,1,1,0
+	attachRules = 1,0,1,0,0
 	
-	bulkheadProfiles = size0
+	bulkheadProfiles = size1
 		
 	//  ============================================================================
 	//	Title, Description, Category, Techs
 	//  ============================================================================
 	
-	title = Vostok Parachute
+	title = Vostok/Voskhod Parachute
 	manufacturer = OKB-1
-	description = When Yuri Gagarin returned to Earth after the first maiden spaceflight, he ejected from the capsule and parachuted to the ground. It was not until later versions of the capsule was the Parachute added.
+	description = When Yuri Gagarin returned to Earth after the first maiden spaceflight, he ejected from the capsule and parachuted to the ground. It was not until later versions of the capsule was the Parachute added. Connect this to the open part of the capsule
 	
 	mass = 0.025
 	
 	category = Utility
 	subcategory = 0
 	
-	tags = vostok, gagarin, soviet, para, parachute
+	tags = vostok, gagarin, soviet, para, parachute, voskhod
 	
 	TechRequired = unlockParts
 	cost = 150
@@ -64,10 +53,11 @@ PART
 	//  ============================================================================
 		
 	crashTolerance = 8
-	maxTemp = 2000
-	skinMaxTemp = 3200
+	maxTemp = 3000
+	skinMaxTemp = 4000
 	emissiveConstant = 0.4 // not too absorptive for reentry
-	thermalMassModifier = 2.0
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 	
 	//  ============================================================================
 	//	Modules and Resources
@@ -76,14 +66,14 @@ PART
 	MODULE:NEEDS[!RealChute]
 	{
 		name = ModuleParachute
-		semiDeployedAnimation = Andromeda_Parachute_1_Semi
-		fullyDeployedAnimation = Andromeda_Parachute_1_Full
-		invertCanopy = false
+		semiDeployedAnimation = semi
+		fullyDeployedAnimation = full
+		invertCanopy = true
 		autoCutSpeed = 0.5
-		capName = Cap1
-		canopyName = Canopy1
-		stowedDrag = 0.25
-		semiDeployedDrag = 1
+		capName = cap
+		canopyName = canopy
+		stowedDrag = 0
+		semiDeployedDrag = 5
 		fullyDeployedDrag = 500
 		minAirPressureToOpen = 0.04
 		deployAltitude = 1000
@@ -109,39 +99,29 @@ PART
 	MODULE:NEEDS[RealChute]
 	{
 		name = RealChuteModule
-		caseMass = 0.01 // ????
-		timer = 0
-		mustGoDown = true
-		cutSpeed = 0.5
-		spareChutes = 1
-		reverseOrientation = true
-
-		PARACHUTE
-		{
-			// source: http://spacenet.h1.ru/vostok/vostokshema.htm
-			material = Nylon
-			preDeployedDiameter = 2.4
-			deployedDiameter = 13.52
-			minIsPressure = false
-			minDeployment = 4000
-			deploymentAlt = 2500 // 2500 for full chute
-			cutAlt = -1
-			preDeploymentSpeed = 2
-			deploymentSpeed = 6
-			preDeploymentAnimation = Almach_Parachute_A_Semi
-			deploymentAnimation = Almach_Parachute_A_Full
-			parachuteName = Almach_Parachute_A_Canopy
-			capName = Cap
-		}
-	}
-
-	MODULE:NEEDS[RealChute]
-	{
-		name = ProceduralChute
-		textureLibrary = StockReplacement
-		currentCanopies = Main chute
-	}
-
+        caseMass = 0.05
+        timer = 0
+        mustGoDown = false
+        cutSpeed = 0.5
+        spareChutes = 0
+ 
+        PARACHUTE
+        {
+            material = Nylon
+            preDeployedDiameter = 2
+            deployedDiameter = 21
+            minIsPressure = true
+            minPressure = 0.01
+            deploymentAlt = 2000
+            cutAlt = -1
+            preDeploymentSpeed = 2
+            deploymentSpeed = 6
+            preDeploymentAnimation = semi
+            deploymentAnimation = full
+            parachuteName = canopy
+            capName = cap
+        }
+    }
 	EFFECTS
 	{
 		rcpredeploy
@@ -183,33 +163,63 @@ PART
 				volume = 1
 			}
 		}
-	}
+	}	
 	
-	MODULE
-	{
-		name = ModuleDecouple
-		isOmniDecoupler = false
-		ejectionForce = 125
-	}
+	//  ============================================================================
+	//	Animations and Textures
+	//  ============================================================================
+	
+	MODULE:NEEDS[!TexturesUnlimited]
+    {
+        name = ReflectiveShaderModule
 
-	MODULE
-	{
-		name = ModuleJettison
-		jettisonName = Fairing1
-		bottomNodeName = top
-		isFairing = True
-		jettisonedObjectMass = 0.5
-		jettisonForce = 15
-		jettisonDirection = 0 0 1
-		stagingEnabled = False
-		checkBottomNode = True
-		useMultipleDragCubes = false
-	}
-	
-	
-	
-	//  ============================================================================
-	//	Comms
-	//  ============================================================================
+        // Lower values for performance, higher values for aesthetics (you shouldn't ever need to go higher than 1024).
+        CubeMapSize = 16
+
+        // How deep the reflection will be ("how far the reflection camera will view")
+        FarClipPlane = 500000000
+		// How far away must something be before it is reflected
+		NearClipPlane = .1
+
+        // Set to false to render all 6 faces of the CubeMap at once (six times slower~)
+        OneFacePerFrame = true
+
+        // The shader to find. The reflective shaders are:
+        // Reflective/Diffuse
+        // Reflective/VertexLit
+        // Reflective/Bumped Diffuse
+		//Reflective/Bumped Specular
+        ShaderName = Reflective/Bumped Diffuse
+		realTimeReflection = False
+		
+
+        // The height of the parallax map. Values are accepted between 0.005 and 0.08.
+        ParallaxHeight = 0.01
+
+        // How reflective the reflection will be (Weakest 0.0 - 1.0 Strongest).
+        ReflectionStrength = 0.50
+		//ReflectionColor = 0, 0, 0, 0
+
+        // Use this variable to specify which meshes to apply the shader to.
+        // Not using this variable will default to the first found mesh.
+        // Use the actual mesh name for the value. Or you could use:
+        // all - to replace the shader on all meshes in the model.
+        MeshesToChange = cap
+
+        // How shiny the specularity will be (if specular).
+        // This value will be automatically set if it already exists on the previous shader and is not defined here.
+        Shininess = 1.0
+		updateRate = 130
+
+        // These variables should be used together only.
+        // These values will be automatically set if they already exist on the previous shader and are not defined here
+        SpecColorR = 0.8
+        SpecColorG = 0.8
+        SpecColorB = 0.8
+        SpecColorA = 0.8
+		rimFalloff = 5.0
+		rimColor = 0.8242, 0.6445, 0.1914, 1.0
+		ReflectionColor = 0.6242, 0.6445, 0.69, 1.0
+    }
 	
 }
