Add the AdjustableCoMShifter to the Apollo capsule

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -195,6 +195,14 @@ PART
 		name = ModuleSAS
 		SASServiceLevel = 3
 	}
+
+	MODULE
+	{
+		name = AdjustableCoMShifter
+		DescentModeCoM = 0, 0, 0.17
+	}
+
+	@CoMOffset = 0.0, -0.25, 0.0
 	
 	MODULE
 	{
@@ -440,7 +448,7 @@ PART
 		}
 	}
 	
-	MODULE
+	MODULE:NEEDS[ConnectedLivingSpace]
 	{
 		name = ModuleConnectedLivingSpace
 		passable = true
