--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloCM.cfg
@@ -501,9 +501,9 @@ PART
 	//	Comms
 	//  ============================================================================
 	
-	MODULE
+	MODULE:NEEDS[!RemoteTech]
 	{
-		name = ModuleDataTransmitter:NEEDS[!RemoteTech]
+		name = ModuleDataTransmitter
 		antennaType = DIRECT
         antennaPower = 64
         antennaCombinable = True
