--- a/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VoskhodCapsule.cfg
@@ -249,9 +249,9 @@ PART
 	//	Comms
 	//  ============================================================================
 	
-	MODULE
+	MODULE:NEEDS[!RemoteTech]
 	{
-		name = ModuleDataTransmitter:NEEDS[!RemoteTech]
+		name = ModuleDataTransmitter
 		antennaType = INTERNAL
 		packetInterval = 1.0
 		packetSize = 1.0
