--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokCapsule.cfg
@@ -247,9 +247,9 @@ PART
 	//	Comms
 	//  ============================================================================
 	
-	MODULE
+	MODULE:NEEDS[!RemoteTech]
 	{
-		name = ModuleDataTransmitter:NEEDS[!RemoteTech]
+		name = ModuleDataTransmitter
 		antennaType = INTERNAL
 		packetInterval = 1.0
 		packetSize = 1.0
