Set LEM mass after engine config pass, also some case fixes if ignoremass ever starts working

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -64,13 +64,13 @@ PART
 	CrewCapacity = 2
 
     leaveCategory = True
-    fuelCrossfeed = true
+    fuelCrossfeed = True
     stageOffset = 1
     childStageOffset = 1
     NoCrossFeedNodeKey = bottom
 
     engineType = LMAE
-    ignoreMass = true
+    ignoreMass = True
 	
 	INTERNAL
 	{
@@ -783,9 +783,11 @@ PART
 
 //  ================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
+//	And also override the mass set by RO engine configs
 //  ================================================================================
 
 @PART[ROC-LEMAscent]:FOR[zzzRealismOverhaul]
 {
     !RESOURCE,*{}
+    @mass = 2.2
 }
