Add sounds to Apollo CM, Fix Texture on SM

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloLESCover.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloLESCover.cfg
@@ -73,7 +73,10 @@ PART
 	}
 	
 	//  ============================================================================
-	//	Comms
+	//	Animations and Textures
 	//  ============================================================================
+	
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple
 	
 }
