--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloSM.cfg
@@ -334,6 +334,9 @@ PART
 		actionGUIName = Toggle Docking Light
 		defaultActionGroup = Light
 	}
+	
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple
 }
 
 //  ================================================================================
