--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloForwardHS.cfg
@@ -122,5 +122,7 @@ PART
 	//	Animations and Textures
 	//  ============================================================================
 	
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple
 	
 }
