--- a/GameData/ROCapsules/PartConfigs/Apollo/TU_Support_Apollo.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/TU_Support_Apollo.cfg
@@ -12,7 +12,7 @@ KSP_MODEL_SHADER
 	model = ROCapsules/Assets/DECQ/Apollo/RCS
 	TEXTURE
     {
-        shader = SSTU/PBR/Metallic
+        shader = TU/Metallic
 		
 		mesh = CM
 		mesh = mesh_030_026
@@ -56,7 +56,7 @@ KSP_MODEL_SHADER
 	model = ROCapsules/Assets/DECQ/Apollo/SM
 	TEXTURE
     {
-        shader = SSTU/PBR/Metallic
+        shader = TU/Metallic
 		
 		mesh = ERVISE
 		mesh = BottomCenter_002
