--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -2,7 +2,7 @@ PART
 {
 	name = ROC-ApolloEngineBlockIII
 	module = Part
-	author = CobaltWolf, capkirk
+	author = CobaltWolf
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_ServiceEngine
@@ -135,15 +135,6 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 	}
-	
-	MODULE
-    {
-        name = ModuleGimbal
-        gimbalTransformName = thrustTransform
-        gimbalRange = 4.0
-        useGimbalResponseSpeed = True
-        gimbalResponseSpeed = True
-    }
 
 	MODULE
 	{
@@ -183,12 +174,14 @@ PART
 	%manufacturer = Bell / Rocketdyne
 	@description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
 	
-	@MODULE[ModuleGimbal]
-	{
-		@gimbalRange = 4.5
-		%useGimbalResponseSpeed = True
-		%gimbalResponseSpeed = 16
-	}
+	%MODULE
+    {
+        %name = ModuleGimbal
+        %gimbalTransformName = thrustTransform
+        %gimbalRange = 4.0
+        %useGimbalResponseSpeed = True
+        %gimbalResponseSpeed = True
+    }
 }
 
 //  ==================================================
@@ -201,10 +194,10 @@ PART
     {
         name = Hypergolic-OMS-White
         transformName = thrustTransform
-        plumePosition = 0.0, 0.0, -0.25
-        plumeScale = 0.25
-        flarePosition = 0.0, 0.0, -1.0
-        flareScale = 0.25
+        plumePosition = 0.0, 0.0, 0.25
+        plumeScale = 0.3
+        flarePosition = 0.0, 0.0, 0.1
+        flareScale = 0.4
         smokePosition = 0.0, 0.0, 0.0
         smokeScale = 1.0
         slagPosition = 0.0, 0.0, 0.0
