--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloEngineBlockIII.cfg
@@ -174,13 +174,13 @@ PART
 	%manufacturer = Bell / Rocketdyne
 	@description = With the decreased weight and LEO operation design, there was no longer a need for a large engine to power the CSM. NASA decided to reuse the successful Lunar Module Ascent Engine. FICTIONAL (Eyes Turned Skyward)
 	
-	%MODULE
+	MODULE
     {
-        %name = ModuleGimbal
-        %gimbalTransformName = thrustTransform
-        %gimbalRange = 4.0
-        %useGimbalResponseSpeed = True
-        %gimbalResponseSpeed = True
+        name = ModuleGimbal
+        gimbalTransformName = thrustTransform
+        gimbalRange = 4.0
+        useGimbalResponseSpeed = True
+        gimbalResponseSpeed = True
     }
 }
 
