--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -780,7 +780,25 @@ PART
         }
     }
 }
-
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+@PART[ROC-LEMAscent]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+    !MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.66	//S-band dish. S-band Omnis not included
+		RFBand = S
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 3.0	//VHF Omnis. EVA omni and LM-CSM omni merged for simplicity
+		RFBand = VHF
+	}
+}
 //  ================================================================================
 //	Final Pass to Make Sure TAC does not add extra resources
 //	And also override the mass set by RO engine configs
