--- a/GameData/ROCapsules/PartConfigs/Mercury/MercuryNose.cfg
+++ b/GameData/ROCapsules/PartConfigs/Mercury/MercuryNose.cfg
@@ -135,3 +135,14 @@ PART
 	sound_vent_large = decouple
 	
 }
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+@PART[ROC-MercuryNose]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@name = ModuleRealAntenna
+		referenceGain = 2.0 	//Estimated size, can't find any documentation
+	}
+}
