--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -349,3 +349,14 @@ PART
     }
 	
 }
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+@PART[ROC-VostokService]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	@MODULE[ModuleDataTransmitter]
+	{
+		@name = ModuleRealAntenna
+		referenceGain = 3.0 	//Estimated size, can't find any documentation
+	}
+}
