--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloHGA.cfg
@@ -134,3 +134,22 @@ PART
         }
     }
 }
+//  ================================================================================
+//	Configure RealAntennas
+//  ================================================================================
+@PART[ROC-ApolloHGA]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 1.8	//Antenna diameter based on combined area of 4 dishes
+		RFBand = S	//Default to S-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 3.0		//Omni based on steerable antenna in low gain mode
+		RFBand = S		//Default to S-band
+	}
+}
