--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloDecoupler.cfg
@@ -8,6 +8,7 @@ PART
 		model = ROCapsules/Assets/BDB/bluedog_Apollo_Block2_Decoupler
 		rotation = 0.0, 30.0, 0.0
 	}
+	RSSROConfig = True
 	rescaleFactor = 1.6047
 	scale = 1.0
 	node_stack_top = 0.0, -0.167, 0.0, 0.0, 1.0, 0.0, 2
