--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -8,6 +8,7 @@ MODEL
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block3_HGA
 	rotation = 0.0, -60.0, 0.0
 }
+	RSSROConfig = True
 	scale = 1
 	rescaleFactor = 1.5646
 	node_attach = 0.0, 0.04, 0.0, 0.0, 1.0 , 0.0
