--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloSolar.cfg
@@ -7,6 +7,7 @@ MODEL
 {
 	model = ROCapsules/Assets/BDB/bluedog_Apollo_Block5_SolarPanels
 }
+	RSSROConfig = True
 	rescaleFactor = 1.5646
 	node_attach = 0.0, 0.038, 0.0, 0.0, 1.0, 0.0
 	TechRequired = spaceStationSolarPanels
