--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloMissionModule.cfg
@@ -113,7 +113,7 @@ MODEL
 	subcategory = 0
 	title = Apollo Block IV Mission Module
 	manufacturer = Rockwell International
-	description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Kane Blok III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
+	description = Following the introduction of more capable lifters for crewed LEO missions, the venerable Apollo Block III+ mission module was replaced with a larger can. Includes a larger attachment node on top for using larger androgynous docking ports. Place it upside down in place of the lunar module, with docking ports on each end. Extract with the CSM after circularization.
 	attachRules = 1,0,1,1,0
 	mass = 4.5
 	dragModelType = default
