Add winged Gemini

--- a/GameData/ROCapsules/PartConfigs/Gemini/TU_Support_Gemini.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/TU_Support_Gemini.cfg
@@ -258,3 +258,84 @@ KSP_MODEL_SHADER
 		}
 	}
 }
+KSP_MODEL_SHADER
+{
+	name = ROC-GeminiWing
+	
+	model = ROCapsules/Assets/FASA/WingGemini
+	TEXTURE
+    {
+        shader = TU/Metallic
+		
+		
+        PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
+KSP_MODEL_SHADER
+{
+	name = ROC-GeminiFlightPack
+	
+	model = ROCapsules/Assets/FASA/WingGemini_FP
+	TEXTURE
+    {
+        shader = TU/Metallic
+		
+		
+        PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
+KSP_MODEL_SHADER
+{
+	name = ROC-GeminiFlightPackContSurf
+	
+	model = ROCapsules/Assets/FASA/WingGemini_FP_CtrlSurf
+	TEXTURE
+    {
+        shader = TU/Metallic
+		
+		
+        PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
