Correct resources for TAC and Kerbalism

--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiCM.cfg
@@ -109,61 +109,6 @@ CrewCapacity = 2
 		DescentModeCoM = 0.0, 0.0, -0.06
 	}
 
-	MODULE
-	{
-		name = ModuleFuelTanks
-		type = ServiceModule
-		volume = 525
-		basemass = -1
-		TANK
-		{
-			name = ElectricCharge
-			amount = 14400
-			maxAmount = 14400
-		}
-		TANK
-		{
-			name = Food
-			amount = 164
-			maxAmount = 164	// 14 days
-		}
-		TANK
-		{
-			name = Water
-			amount = 8
-			maxAmount = 8	// 1 day
-		}
-		TANK
-		{
-			name = Oxygen
-			amount = 1184
-			maxAmount = 1184	// 1 day
-		}
-		TANK
-		{
-			name = CarbonDioxide
-			amount = 0
-			maxAmount = 1023	// 1 day
-		}
-		TANK
-		{
-			name = Waste
-			amount = 0
-			maxAmount = 111	// 14 days
-		}
-		TANK
-		{
-			name = WasteWater
-			amount = 0
-			maxAmount = 138	// 14 days
-		}
-		TANK
-		{
-			name = LithiumHydroxide
-			amount = 29
-			maxAmount = 29	// 14 days
-		}
-	}
 	//Ejection
 	MODULE
 	{
@@ -181,6 +126,19 @@ CrewCapacity = 2
 			semiDeployedHeight = 1.25
 			//time in seconds it takes to deploy, or to go from semi to full mode
 			deployTime = 0.33
+		}
+	}
+	MODULE
+	{
+		name = ModuleFuelTanks
+		type = ServiceModule
+		volume = 525
+		basemass = -1
+		TANK
+		{
+			name = ElectricCharge
+			amount = 14400
+			maxAmount = 14400
 		}
 	}
 	//thermal
@@ -308,6 +266,51 @@ CrewCapacity = 2
 			%ResourceName = Waste
 			%Ratio = 0.00003932
 			%DumpExcess = false
+		}
+	}
+	@MODULE[ModuleFuelTanks]
+	{
+		TANK
+		{
+			name = Food
+			amount = 164
+			maxAmount = 164	// 14 days
+		}
+		TANK
+		{
+			name = Water
+			amount = 8
+			maxAmount = 8	// 1 day
+		}
+		TANK
+		{
+			name = Oxygen
+			amount = 1184
+			maxAmount = 1184	// 1 day
+		}
+		TANK
+		{
+			name = CarbonDioxide
+			amount = 0
+			maxAmount = 1023	// 1 day
+		}
+		TANK
+		{
+			name = Waste
+			amount = 0
+			maxAmount = 111	// 14 days
+		}
+		TANK
+		{
+			name = WasteWater
+			amount = 0
+			maxAmount = 138	// 14 days
+		}
+		TANK
+		{
+			name = LithiumHydroxide
+			amount = 29
+			maxAmount = 29	// 14 days
 		}
 	}
 }
