Add Agena Docking Adapter

--- a/GameData/ROCapsules/PartConfigs/Gemini/TU_Support_Gemini.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/TU_Support_Gemini.cfg
@@ -4,6 +4,33 @@
 
 KSP_MODEL_SHADER
 {
+	name = ROC-AgenaPort
+	
+	model = ROCapsules/Assets/FASA/Agena_Docking
+	TEXTURE
+    {
+        shader = TU/Metallic
+		
+		
+        PROPERTY
+		{
+			name = _Color
+			color = 1.5, 1.5, 1.5
+		}
+		PROPERTY
+		{
+			name = _Metal
+			float = 0.25
+		}
+		PROPERTY
+		{
+			name = _Smoothness
+			float = 0.25
+		}
+	}
+}
+KSP_MODEL_SHADER
+{
 	name = ROC-GeminiEquipmentSection
 	
 	model = ROCapsules/Assets/FASA/Gemini_UtilityPack
