Fix Apollo RealChute config
RO overrides our values; un-override them

--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloDrogueParachute.cfg
@@ -187,3 +187,18 @@ PART
         }
     }
 }
+
+@PART[ROC-ApolloDrogueParachute]:AFTER[zzzRealismOverhaul]
+{
+    // RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+    // which would make the drogue cut before it even deploys. Get back
+    // our historical numbers
+    @MODULE[RealChuteModule]
+    {
+        @PARACHUTE
+        {
+            @minDeployment = 7525
+            @deploymentAlt = 7315
+        }
+    }    
+}
