--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloParachute.cfg
@@ -184,3 +184,17 @@ PART
         }
     }
 }
+
+@PART[ROC-ApolloParachute]:AFTER[zzzRealismOverhaul]
+{
+    // RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
+    // Get back our historical numbers
+    @MODULE[RealChuteModule]
+    {
+        @PARACHUTE
+        {
+            @minDeployment = 3660
+            @deploymentAlt = 3350
+        }
+    }    
+}
