--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Active.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Active.cfg
@@ -7,7 +7,7 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/BDB/APAS/CXA_APAS_A_L04F
-   		scale = 1.0, 1.0, 1.0
+		scale = 1.0, 1.0, 1.0
 	}
 	rescaleFactor = 1.6533
 
@@ -45,8 +45,9 @@ PART
 
 	tags = ISS APAS docking PMA tantares loaf bread apollo kane ets
 
-	@MODULE[ModuleDockingNode]
+	MODULE
 	{
+		name = ModuleDockingNode
 		nodeType = APAS8995
 		gendered = false
 		genderFemale = false
@@ -65,10 +66,10 @@ PART
 
 	MODULE
 	{
- 	 	name = ModuleAnimateGeneric
-  		animationName = Default Take
-   		isOneShot = false
-   		startEventGUIName = Extend Docking Ring
+		name = ModuleAnimateGeneric
+		animationName = Default Take
+		isOneShot = false
+		startEventGUIName = Extend Docking Ring
 		endEventGUIName = Retract Docking Ring
 		actionGUIName = Toggle Docking Ring
 	}
