--- a/GameData/ROCapsules/PartConfigs/APAS/APAS_Passive.cfg
+++ b/GameData/ROCapsules/PartConfigs/APAS/APAS_Passive.cfg
@@ -46,8 +46,9 @@ PART
 	
 	tags = ISS APAS docking PMA tantares loaf bread apollo kane ets
 
-	@MODULE[ModuleDockingNode]
+	@MODULE
 	{
+		name = ModuleDockingNode
 		nodeType = APAS8995
 		gendered = false
 		genderFemale = false
