--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -75,7 +75,8 @@ PART
 		RESOURCE
 			{
 				name = ElectricCharge
-				rate = 1.000
+				rate = 4.000
+				//No clue what actual power draw is, but the radiators are specced for 5 kW, so lets go a little lower
 			}
 	}
 	
@@ -197,13 +198,6 @@ PART
 		
 		TANK
 		{
-			//0.00001189 lithium per sec x 3600 sec in 1 hour x 24 hours x 21 days = +- 18 units
-			name = LithiumHydroxide
-			amount = 18		
-			maxAmount = 18
-		}
-		TANK
-		{
 			name = Waste
 			amount = 0
 			maxAmount = 67.2
@@ -258,5 +252,71 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}		
+	}
+}
+
+//RemoteTech
+@PART[ROC-OrionCM]:NEEDS[RemoteTech]:FOR[ROCapsules]
+{
+	%MODULE[ModuleSPU]{}
+	!MODULE[ModuleDataTransmitter] {}
+
+	%MODULE[ModuleRTAntennaPassive]
+	{
+		%OmniRange = 8E5	//800 km
+		
+		%TRANSMITTER
+		 {
+			%PacketInterval = 0.2
+			%PacketSize = 2
+			%PacketResourceCost = 2.5
+		}
+	}
+}
+
+//RealAntennas
+@PART[ROC-OrionCM]:BEFORE[RealAntennas]:NEEDS[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.8	//Guess of phased array size based on pictures
+		RFBand = K	//Default to K-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = S		//Default to S-band
+	}
+}
+
+//TACLS Support
+@PART[ROC-OrionCM]:FOR[RealismOverhaulTACLS]:NEEDS[TacLifeSupport]
+{
+	MODULE
+	{
+		name = TacGenericConverter
+		converterName = CO2 Vacuum Scrubber
+		tag = Life Support
+		StartActionName = Start CO2 Scrubber
+		StopActionName = Stop CO2 Scrubber
+		conversionRate = 6.0
+		GeneratesHeat = False
+		UseSpecialistBonus = False
+
+		INPUT_RESOURCE
+		{
+			ResourceName = CarbonDioxide
+			Ratio = 0.006216
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+
+		INPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 0.1
+		}
 	}
 }
