--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -130,16 +130,7 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesRF
-		thrustVectorTransformName = thrustTransform
-	}
-	
-	MODULE
-	{
-		name = ModuleGimbal
-		gimbalTransformName = gimbal
-		gimbalRange = 6
-		useGimbalResponseSpeed = true
-		gimbalResponseSpeed = 16
+		thrustVectorTransformName = newThrustTransform
 	}
 	
 	MODULE
@@ -149,7 +140,7 @@ PART
 		fxMax = 0.9
 		maxDistance = 60
 		falloff = 1.2
-		thrustTransformName = thrustTransform
+		thrustTransformName = newThrustTransform
 	}
 
 	PhysicsSignificance = 1
