--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -111,6 +111,17 @@ PART
 	maxTemp = 1200
 	skinMaxTemp = 1200
 	fuelCrossFeed = true
+	
+	MODULE
+	{
+		name = ModuleCommand
+		RESOURCE
+			{
+				name = ElectricCharge
+				rate = 0.05
+				//Based off of ATV, should be fully autonomous
+			}
+	}
 
 	MODULE
 	{
