--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESMCover.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESMCover.cfg
@@ -124,7 +124,7 @@ PART
 	// Kerbal Space Program - Part Config
 
 	// --- general parameters ---
-	name = ROCOrionCover2
+	name = ROC-OrionCover2
 	module = Part
 	author = DECQ
 	
@@ -167,7 +167,7 @@ PART
 	attachRules = 1,0,1,0,1
 
 	// --- standard part parameters ---
-	mass = 0.01
+	mass = 0.450
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
