--- a/GameData/ROCapsules/PartConfigs/Orion/OrionSolar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionSolar.cfg
@@ -27,7 +27,7 @@ PART
 	subcategory = 0
 	title = Orion Solar Panels
 	manufacturer = Airbus Defence and Space
-	description = Solar panels for the Orion. WARNING: Currently nonfunctional.
+	description = Solar panels for the Orion.
 	attachRules = 0,1,0,0,1
 	//this is a total work of guessing
 	mass = 0.1
