--- a/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionCM.cfg
@@ -14,6 +14,23 @@ PART
 		scale = 1, 1, 1
 		rotation = 0, 180, 0
 	}
+	
+	//	 Linear positive pitch thruster.
+
+		MODEL
+		{
+			model = RealismOverhaul/Models/LinearRCS
+			scale = 0.1, 0.1, 0.1
+			position = -0.12, 0.1, -2.1
+			rotation = 0.0, 0.0, 0.0
+		}
+		MODEL
+		{
+			model = RealismOverhaul/Models/LinearRCS
+			scale = 0.1, 0.1, 0.1
+			position = 0.12, 0.1, -2.1
+			rotation = 0.0, 0.0, 0.0
+		}
 
 	// --- asset parameters ---
 	//mesh = model.mu
@@ -83,7 +100,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.17
+		DescentModeCoM = 0, 0, -0.2
 	}
 	
 	MODULE
@@ -127,23 +144,8 @@ PART
 	{
 		name = ModuleRCS
 		thrusterTransformName = RCSthruster
-		//3x711kn  per each side = 2.133 KN
-		thrusterPower = 2.133
-		resourceName = Hydrazine
-		atmosphereCurve
-		{
-			key = 0 239
-			key = 1 190
-		}
-		
-	}
-	//Using the light transforms for RCS, since the pitch RCS is located there in the newer version
-	MODULE
-	{
-		name = ModuleRCS
-		thrusterTransformName = LIGHT
-		//3x711kn  per each side = 2.133 KN
-		thrusterPower = 2.133
+		//MR-104G - 712 newtons
+		thrusterPower = 0.712
 		resourceName = Hydrazine
 		atmosphereCurve
 		{
@@ -154,13 +156,6 @@ PART
 	}
 
 	PhysicsSignificance = 1
-
-	MODULE
-	{
-		name = ModuleDecouple
-		ejectionForce = 700
-		explosiveNodeID = top
-	}
 
 	
 	//it's 0.06t(60kg) of contingency on the orion craft itself, ergo water and oxygen.
