--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -19,49 +19,49 @@ PART
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = 1.2974, -2.672776, 0.7503
+		position = 1.2908, -2.672776, 0.7465
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = 0.9691, -2.672776, 1.1411
+		position = 0.9642, -2.672776, 1.1353
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = -1.2974, -2.672776, 0.7503
+		position = -1.2908, -2.672776, 0.7465
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = -0.9691, -2.672776, 1.1411
+		position = -0.9642, -2.672776, 1.1353
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = -1.2974, -2.672776, -0.7503
+		position = -1.2908, -2.672776, -0.7465
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = -0.9691, -2.672776, -1.1411
+		position = -0.9642, -2.672776, -1.1353
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = 1.2974, -2.672776, -0.7503
+		position = 1.2908, -2.672776, -0.7465
 		rotation = 0.0, 0.0, 0.0
 	}
 	MODEL
 	{
 		model = RealismOverhaul/emptyengine
-		position = 0.9691, -2.672776, -1.1411
+		position = 0.9642, -2.672776, -1.1353
 		rotation = 0.0, 0.0, 0.0
 	}
 
@@ -119,7 +119,7 @@ PART
 			{
 				name = ElectricCharge
 				rate = 0.05
-				//Based off of ATV, should be fully autonomous
+				//Based off of ATV, should be fully autonomous I think
 			}
 	}
 
@@ -134,7 +134,7 @@ PART
 	
 	//R-4D
 	engineType = R4D11
-	stagingIcon = LIQUID_ENGINE
+	stagingIcon = DECOUPLER_VERT
 	engineTypeMult = 8
 	clusterMultiplier = 8
 	
@@ -203,11 +203,10 @@ PART
 			maxAmount = 4031.3
 		}
 	}
-
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 200
+		ejectionForce = 150
 		explosiveNodeID = top
 	}
 }
