--- a/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionForwardHS.cfg
@@ -59,7 +59,7 @@ PART
 	breakingTorque = 500000
 	linearStrength = 9300000
 	angularStrength = 9300000
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	bulkheadProfiles = size0 //, srf
 
 
@@ -70,53 +70,11 @@ PART
 		nodeType = NASADock
 	}
 	
-	
-	MODULE:NEEDS[!RealChute]
+	MODULE
 	{
-		name = ModuleParachute
-		invertCanopy = true
-		autoCutSpeed = 0.2
-		capName = parashute
-		canopyName = CANOPY
-		semiDeployedAnimation = SEMI
-		fullyDeployedAnimation = FULL
-		stowedDrag = 0.10
-		semiDeployedDrag = 2
-		fullyDeployedDrag = 3
-		minAirPressureToOpen = 0.02
-		clampMinAirPressure = 0.02
-		deployAltitude = 10500
-		deploymentSpeed = 0.16667
-		semiDeploymentSpeed = 0.8
-		chuteMaxTemp = 9500
-		chuteThermalMassPerArea = 0.09
-	}
-
-	MODULE:NEEDS[RealChute]
-	{
-		name = RealChuteModule
-		caseMass = 0.4016
-		timer = 1.2
-		mustGoDown = false
-		spareChutes = 1
-		cutSpeed = 0.25
-		
-		PARACHUTE
-		{
-			material = Nylon
-			preDeployedDiameter = 2
-			deployedDiameter = 12
-			minIsPressure = false
-			minDeployment = 6000
-			deploymentAlt = 3000
-			cutAlt = -1
-			preDeploymentSpeed = 1
-			deploymentSpeed = 2
-			preDeploymentAnimation = SEMI
-			deploymentAnimation = FULL
-			parachuteName = CANOPY
-			capName = parashute
-		}
+		name = ModuleDecouple
+		ejectionForce = 700
+		explosiveNodeID = bottom
 	}
 
 	MODULE
