--- a/GameData/ROCapsules/PartConfigs/Orion/OrionParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionParachute.cfg
@@ -84,19 +84,20 @@ PART
 		
 		PARACHUTE
 		{
-			material = Nylon
-			preDeployedDiameter = 8
-			deployedDiameter = 48
-			minIsPressure = false
-			minDeployment = 2500
-			deploymentAlt = 900
-			cutAlt = -1
-			preDeploymentSpeed = 1
-			deploymentSpeed = 2
+			parachuteName = CANOPY
+			capName = Parashute
 			preDeploymentAnimation = SEMI
 			deploymentAnimation = FULL
-			parachuteName = CANOPY
-			capName = parashute
+			material = Nylon
+			minIsPressure = False
+			minPressure = 0.01
+			preDeployedDiameter = 8
+			preDeploymentSpeed = 6.0
+			minDeployment = 2895
+			deployedDiameter = 48
+			deploymentSpeed = 10.0
+			deploymentAlt = 2500
+			cutAlt = 0
 		}
 	}
 
