Use built in config to avoid patch manager

--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -133,15 +133,65 @@ PART
 	}
 	
 	//R-4D
-	engineType = R4D11
 	stagingIcon = DECOUPLER_VERT
-	engineTypeMult = 8
-	clusterMultiplier = 8
 	
 	MODULE
 	{
 		name = ModuleEnginesRF
 		thrustVectorTransformName = newThrustTransform
+		exhaustDamage = True
+		heatProduction = 10
+		EngineType = LiquidFuel
+		ullage = False
+		pressureFed = True
+		ignitions = -1
+	}
+	
+	 MODULE
+	{
+		name = ModuleEngineConfigs
+		type = ModuleEngines
+		configuration = R-4D-11
+		origMass = 0.00376
+
+		CONFIG
+		{
+			name = 8*R-4D-11
+			description = Cluster of 8 R-4D-11s, used as backup propulsion for the ESM
+			minThrust = 3.920
+			maxThrust = 3.920
+			heatProduction = 10
+			massMult = 1.0
+			ullage = False
+			pressureFed = True
+			ignitions = -1
+
+			IGNITOR_RESOURCE
+			{
+				name = ElectricCharge
+				amount = 0.0046
+			}
+
+			PROPELLANT
+			{
+				name = MMH
+				ratio = 0.4990
+				DrawGauge = True
+			}
+
+			PROPELLANT
+			{
+				name = MON3
+				ratio = 0.5010
+				DrawGauge = False
+			}
+
+			atmosphereCurve
+			{
+				key = 0 311
+				key = 1 155
+			}
+		}
 	}
 	
 	MODULE
