Fix crossfeed issues

--- a/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionESM.cfg
@@ -213,6 +213,8 @@ PART
 	@title = Orion European Service Module
 	@manufacturer = Airbus Defence and Space
 	@description = The service module of the Orion spacecraft contains fuel and oxidizer for the main propulsion system, life support, electrical batteries and everything else needed for extended orbital operations.
+	
+	%fuelCrossFeed = true
 
 	MODULE
 	{
