Fix parachute name

--- a/GameData/ROCapsules/PartConfigs/Orion/OrionParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionParachute.cfg
@@ -77,7 +77,7 @@ PART
 	{
 		name = RealChuteModule
 		caseMass = 0.3498
-		timer = 2
+		timer = 0
 		mustGoDown = false
 		spareChutes = 1
 		cutSpeed = 0.25
@@ -85,7 +85,7 @@ PART
 		PARACHUTE
 		{
 			parachuteName = CANOPY
-			capName = Parashute
+			capName = parashute
 			preDeploymentAnimation = SEMI
 			deploymentAnimation = FULL
 			material = Nylon
