--- a/GameData/ROCapsules/PartConfigs/Orion/OrionRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionRCS.cfg
@@ -40,7 +40,7 @@ PART
 	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
-	mass = 0.43
+	mass = 0.15
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
@@ -56,6 +56,9 @@ PART
 	maxTemp = 900
 	skinMaxTemp = 1200
 	fuelCrossFeed = true
+	
+	useRcsConfig = RCSBlock
+	useRcsMass = True
 
 
 	// --- rcs module parameters ---
