--- a/GameData/ROCapsules/PartConfigs/Orion/OrionParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Orion/OrionParachute.cfg
@@ -28,7 +28,7 @@ PART
 	TechRequired = largeControl
 	entryCost = 500
 	cost = 850
-	category = Parachutes
+	category = Utility
 	subcategory = 0
 	title = Orion Main Parachute
 	manufacturer = Lockheed Martin
