--- a/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachuteDrogue.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/GeminiParachuteDrogue.cfg
@@ -5,6 +5,8 @@ PART
 	name = ROC-GeminiParachuteDrogue
 	module = Part
 	author = Frizzank, capkirk
+	
+	RSSROConfig = True
 
 	// --- asset parameters ---
 	MODEL
