GATV port fixes

--- a/GameData/ROCapsules/PartConfigs/Gemini/AgenaPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/AgenaPort.cfg
@@ -5,6 +5,7 @@ PART
 	name = ROC-AgenaPort
 	module = Part
 	author = Frizzank, capkirk
+	RSSROConfig = True
 
 	// --- asset parameters ---
 	MODEL
@@ -35,7 +36,7 @@ PART
 	cost = 450
 	category = Coupling
 	subcategory = 0
-	title = Gemini Agena Target/Docking Adapter
+	title = Gemini Agena Target Vehicle Docking Port
 	manufacturer = McDonnell Aircraft
 	description = This special docking port is designed to capture the Gemini nose cone's docking mechanism. The simple mechanical connection won't allow you to transfer crew, but it will securely attach two vessels together, for berthing or travel. Electrical connections and a gauge cluster mounted just above the docking port allow the crew to control the vehicle they are docked too.
 
