--- a/GameData/ROCapsules/PartConfigs/Gemini/AgenaPort.cfg
+++ b/GameData/ROCapsules/PartConfigs/Gemini/AgenaPort.cfg
@@ -5,22 +5,24 @@ PART
 	name = ROC-AgenaPort
 	module = Part
 	author = Frizzank, capkirk
+	RSSROConfig = True
 
 	// --- asset parameters ---
 	MODEL
 	{
-	  model = ROCapsules/Assets/FASA/Agena_Docking
-	  scale = 1.219, 1.219, 1.219
+		model = ROCapsules/Assets/BDB/GATV/bluedog_GATV_DockingPort
 	}
-	rescaleFactor = 1.0
-	scale = 1.219
+	rescaleFactor = 1.6
+	scale = 1.0
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z, size
-	node_stack_bottom = 0.0, -0.25, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_connect1 = 0.624, 0.0, 0.0, 0.0, 1.0, 0.0, 0
-	node_stack_connect2 = -0.624, 0.0, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_bottom = 0.0, -0.046087, 0.0, 0.0, -1.0, 0.0, 0
+	//node_stack_top = 0.0, 0.445573, 0.0, 0.0, 1.0, 0.0, 0
+	node_stack_dock = 0.0, 0.0108, 0.0, 0.0, 1.0, 0.0, 0
+	//node_stack_connect2 = -0.624, 0.0, 0.0, 0.0, 1.0, 0.0, 0
+	//node_stack_connect1 = 0.624, 0.0, 0.0, 0.0, 1.0, 0.0, 0
+	node_attach = 0.0, -0.046087, 0.0, 0.0, -1.0, 0.0, 0
 
 
 	stackSymmetry = 1
@@ -34,9 +36,9 @@ PART
 	cost = 450
 	category = Coupling
 	subcategory = 0
-	title = Gemini Agena Target/Docking Adapter
+	title = Gemini Agena Target Vehicle Docking Port
 	manufacturer = McDonnell Aircraft
-	description = Gemini target/docking adapter used to convert an Agena-D into a Gemini Agena Target Vehicle. Better put a fairing on it too.
+	description = This special docking port is designed to capture the Gemini nose cone's docking mechanism. The simple mechanical connection won't allow you to transfer crew, but it will securely attach two vessels together, for berthing or travel. Electrical connections and a gauge cluster mounted just above the docking port allow the crew to control the vehicle they are docked too.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
@@ -57,7 +59,7 @@ PART
 	MODULE
 	{
 		name = ModuleDockingNode
-		referenceAttachNode = top
+		referenceAttachNode = dock
 		nodeType = GeminiAgena
 		gendered = True
 		genderFemale = True
@@ -76,68 +78,43 @@ PART
 
 	MODULE
 	{
-		name = ModuleLight
-		lightName = spotlight
-		useAnimationDim = true
-		lightBrightenSpeed = 3.5
-		lightDimSpeed = 3.5
-		resourceAmount = 0.01
-		animationName = Agena_Lights
-		useResources = true
+		name = ModuleAnimateGeneric
+		animationName = dockingPort_Lights
+		startEventGUIName = Lights On
+		endEventGUIName = Lights Off
+		actionGUIName = Toggle Lights
+		defaultActionGroup = Light
+		animSpeed = 10
 	}
 
-//Reflection shader plugin
 	MODULE
 	{
-		name = ReflectiveShaderModule
-
-		// Lower values for performance, higher values for aesthetics (you shouldn't ever need to go higher than 1024).
-		CubeMapSize = 8
-
-		// How deep the reflection will be ("how far the reflection camera will view")
-		FarClipPlane = 500000000
-		// How far away must something be before it is reflected
-		NearClipPlane = .1
-
-		// Set to false to render all 6 faces of the CubeMap at once (six times slower~)
-		OneFacePerFrame = true
-
-		// The shader to find. The reflective shaders are:
-		// Reflective/Diffuse
-		// Reflective/VertexLit
-		// Reflective/Bumped Diffuse
-		//Reflective/Bumped Specular
-		ShaderName = Reflective/Bumped Diffuse
-		realTimeReflection = False
-		
-
-		// The height of the parallax map. Values are accepted between 0.005 and 0.08.
-		ParallaxHeight = 0.01
-
-		// How reflective the reflection will be (Weakest 0.0 - 1.0 Strongest).
-		ReflectionStrength = 0.15
-		//ReflectionColor = 0, 0, 0, 0
-
-		// Use this variable to specify which meshes to apply the shader to.
-		// Not using this variable will default to the first found mesh.
-		// Use the actual mesh name for the value. Or you could use:
-		// all - to replace the shader on all meshes in the model.
-		MeshesToChange = all	
-
-		// How shiny the specularity will be (if specular).
-		// This value will be automatically set if it already exists on the previous shader and is not defined here.
-		Shininess = 1.0
-		updateRate = 30
-
-		// These variables should be used together only.
-		// These values will be automatically set if they already exist on the previous shader and are not defined here
-		SpecColorR = 0.8
-		SpecColorG = 0.8
-		SpecColorB = 0.8
-		SpecColorA = 0.8
-		rimFalloff = 5.0
-		rimColor = 0.8242, 0.6445, 0.1914, 1.0
-		ReflectionColor = 0.6242, 0.6445, 0.69, 1.0
+		name = ModuleAnimateGeneric
+		animationName = dockingPort_RCS
+		startEventGUIName = RCS Indicator On
+		endEventGUIName = RCS Indicator Off
+		actionGUIName = Toggle RCS Indicator
+		defaultActionGroup = RCS
+		animSpeed = 10
 	}
-	
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = dockingPort_SAS
+		startEventGUIName = SAS Indicator On
+		endEventGUIName = SAS Indicator Off
+		actionGUIName = Toggle SAS Indicator
+		defaultActionGroup = SAS
+		animSpeed = 10
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = dockingPort_Rigid
+		startEventGUIName = Rigidize Docking Port
+		endEventGUIName = Release Docking Port
+		actionGUIName = Toggle Docking Port
+	}
 }
